--- a/ship-manual.ipynb
+++ b/ship-manual.ipynb
@@ -102,6 +102,14 @@
     "time = (endVelocity - startVelocity) / acceleration\n",
     "print(\"Tiempo para alcanzar la velocidad deseada = \", time)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Autor\n",
+    "Alan Javier Alvarez Rivera"
+   ]
   }
  ],
  "metadata": {
