--- a/ship-manual.ipynb
+++ b/ship-manual.ipynb
@@ -108,7 +108,9 @@
    "metadata": {},
    "source": [
     "## Autor\n",
-    "Alan Javier Alvarez Rivera"
+    "Alan Javier Alvarez Rivera\n",
+    "\n",
+    "Miercoles 09 de Febrero 2022"
    ]
   }
  ],
