--- a/Primeros pasos.ipynb
+++ b/Primeros pasos.ipynb
@@ -5,12 +5,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from datetime import date\n",
+    "\n",
+    "print(\"Today's date is: \")"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "a4b57680f947797efd172336bdac56d314a4485b1aff1f63fff2a9a40c1a00cb"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.10.2 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
