--- a/Primeros pasos.ipynb
+++ b/Primeros pasos.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "from datetime import date\n",
     "\n",
-    "print(\"Today's date is: \")"
+    "print(\"Today's date is: \"+ str(date.today()))"
    ]
   }
  ],
