--- a/Primeros pasos.ipynb
+++ b/Primeros pasos.ipynb
@@ -10,6 +10,21 @@
     "\n",
     "print(\"Today's date is: \"+ str(date.today()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1 parsec es 3.26156 años luz\n",
+    "\n",
+    "parsec = 11\n",
+    "\n",
+    "lightyears = 0\n",
+    "\n",
+    "print(str(parsec) + \" parsec, is \" + str(lightyears) + \" lightyears\")"
+   ]
   }
  ],
  "metadata": {
