Resultado de conversion

--- a/Primeros pasos.ipynb
+++ b/Primeros pasos.ipynb
@@ -20,10 +20,10 @@
     "#1 parsec es 3.26156 años luz\n",
     "\n",
     "parsec = 11\n",
+    "conversion = 3.26156\n",
+    "lightyears = parsec * conversion\n",
     "\n",
-    "lightyears = 0\n",
-    "\n",
-    "print(str(parsec) + \" parsec, is \" + str(lightyears) + \" lightyears\")"
+    "print(str(parsec) + \" parsec, es: \" + str(lightyears) + \" años luz\")"
    ]
   }
  ],
