--- a/Módulo3Katas.ipynb
+++ b/Módulo3Katas.ipynb
@@ -8,11 +8,41 @@
     "La velocidad del asteroide varía dependiendo de lo cerca que esté del sol, y cualquier velocidad superior a 25 kilómetros por segundo (km/s) merece una advertencia.\n",
     "Un asteroide se acerca, y viaja a una velocidad de 49 km/s."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asteroide = 49\n",
+    "if asteroide > 25:\n",
+    "    print('¡Cuidado!    ¡Se aproxima un asteroide!')\n",
+    "else:\n",
+    "    print('¡Buenos dias!    ¡Hoy todo se encuentra bien :)!')"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "a4b57680f947797efd172336bdac56d314a4485b1aff1f63fff2a9a40c1a00cb"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.10.2 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
