--- a/Módulo3Katas.ipynb
+++ b/Módulo3Katas.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "## Para este ejercicio, escribirás una lógica condicional que imprima una advertencia si un asteroide se acerca a la Tierra demasiado rápido. \n",
+    "\n",
+    "# Ejercicio N° 1\n",
+    "\n",
     "La velocidad del asteroide varía dependiendo de lo cerca que esté del sol, y cualquier velocidad superior a 25 kilómetros por segundo (km/s) merece una advertencia.\n",
     "Un asteroide se acerca, y viaja a una velocidad de 49 km/s."
    ]
@@ -20,6 +23,15 @@
     "    print('¡Cuidado!    ¡Se aproxima un asteroide!')\n",
     "else:\n",
     "    print('¡Buenos dias!    ¡Hoy todo se encuentra bien :)!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio N°2\n",
+    "\n",
+    "Si un asteroide entra en la atmósfera de la Tierra a una velocidad mayor o igual a 20 km/s, a veces produce un rayo de luz que se puede ver desde la Tierra. Escribe la lógica condicional que usa declaraciones if, else, y elif para alertar a las personas de todo el mundo que deben buscar un asteroide en el cielo. ¡Hay uno que se dirige a la tierra ahora a una velocidad de 19 km/s!"
    ]
   }
  ],
