--- a/Módulo3Katas.ipynb
+++ b/Módulo3Katas.ipynb
@@ -33,6 +33,21 @@
     "\n",
     "Si un asteroide entra en la atmósfera de la Tierra a una velocidad mayor o igual a 20 km/s, a veces produce un rayo de luz que se puede ver desde la Tierra. Escribe la lógica condicional que usa declaraciones if, else, y elif para alertar a las personas de todo el mundo que deben buscar un asteroide en el cielo. ¡Hay uno que se dirige a la tierra ahora a una velocidad de 19 km/s!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asteroide = 19\n",
+    "if asteroide == 20:\n",
+    "    print('¡Se puede observar un asteroide!')\n",
+    "elif asteroide > 20:\n",
+    "    print('¡Se puede observar un asteroide!')\n",
+    "else:\n",
+    "    print('¡Todo bien esta noche!')"
+   ]
   }
  ],
  "metadata": {
