--- a/Módulo3Katas.ipynb
+++ b/Módulo3Katas.ipynb
@@ -65,6 +65,28 @@
     "\n",
     "Usando toda esta información, escribe un programa que emita la advertencia o información correcta a la gente de la Tierra, según la velocidad y el tamaño de un asteroide. Utiliza instrucciones if, else, y elif, así como los operadores and y or."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vel_asteroide = 1\n",
+    "tam_asteroide = 1\n",
+    "\n",
+    "if vel_asteroide > 25 and tam_asteroide > 25:\n",
+    "    print('¡Alerta, Un Asteroide impactara con la tierra!')\n",
+    "elif vel_asteroide >= 20 and vel_asteroide <= 25:\n",
+    "    if tam_asteroide < 25:\n",
+    "        print('¡Se puede observar un asteroide!')\n",
+    "    elif tam_asteroide >= 25:\n",
+    "        print('¡Un Asteroide impactara con la tierra!')\n",
+    "elif tam_asteroide >= 25:\n",
+    "    print('¡Un Asteroide impactara con la tierra!')\n",
+    "else:\n",
+    "    print('Todo esta bien :)')"
+   ]
   }
  ],
  "metadata": {
