--- a/Modulo4Katas.ipynb
+++ b/Modulo4Katas.ipynb
@@ -30,6 +30,24 @@
     "texto = \"Interesting facts about the Moon. The Moon is Earth's only satellite. There are several interesting facts about the Moon and how it affects life here on Earth. On average, the Moon moves 4cm away from the Earth every year. This yearly drift is not significant enough to cause immediate effects on Earth. The highest daylight temperature of the Moon is 127 C.\"\n",
     "texto .split('. ')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora, define algunas palabras clave para búsqueda que te ayudarán a determinar si una oración contiene un hecho."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define las palabras pista: average, temperature y distance suenan bien\n",
+    "\n",
+    "palabras = ['average', 'temperature', 'distance']"
+   ]
   }
  ],
  "metadata": {
