--- a/Modulo4Katas.ipynb
+++ b/Modulo4Katas.ipynb
@@ -46,7 +46,29 @@
    "source": [
     "# Define las palabras pista: average, temperature y distance suenan bien\n",
     "\n",
-    "palabras = ['average', 'temperature', 'distance']"
+    "palabras = [\"average\", \"temperature\", \"distance\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cre un bucle para imprimir solo datos sobre la Luna que estén relacionados con las palabras clave definidas anteriormente:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ciclo for para recorrer la cadena\n",
+    "\n",
+    "for txt in texto:\n",
+    "    for word in palabras:\n",
+    "        if word in txt:\n",
+    "            print(txt)\n",
+    "            break"
    ]
   }
  ],
