--- a/Modulo4Katas.ipynb
+++ b/Modulo4Katas.ipynb
@@ -27,8 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "texto = \"Interesting facts about the Moon. The Moon is Earth's only satellite. There are several interesting facts about the Moon and how it affects life here on Earth. On average, the Moon moves 4cm away from the Earth every year. This yearly drift is not significant enough to cause immediate effects on Earth. The highest daylight temperature of the Moon is 127 C.\"\n",
-    "texto .split('. ')"
+    "texto = \"\"\"Interesting facts about the Moon. The Moon is Earth's only satellite. There are several interesting facts about the Moon and how it affects life here on Earth. On average, the Moon moves 4cm away from the Earth every year. This yearly drift is not significant enough to cause immediate effects on Earth. The highest daylight temperature of the Moon is 127 C.\"\"\"\n",
+    "texto .split(\". \")"
    ]
   },
   {
@@ -45,7 +45,6 @@
    "outputs": [],
    "source": [
     "# Define las palabras pista: average, temperature y distance suenan bien\n",
-    "\n",
     "palabras = [\"average\", \"temperature\", \"distance\"]"
    ]
   },
@@ -58,16 +57,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Ciclo for para recorrer la cadena\n",
-    "\n",
     "for txt in texto:\n",
     "    for word in palabras:\n",
     "        if word in txt:\n",
     "            print(txt)\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finalmente, actualiza el bucle(ciclo) para cambiar C a Celsius:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ciclo para cambiar C a Celsius\n",
+    "for txt in texto:\n",
+    "    for word in palabras:\n",
+    "        if word in txt:\n",
+    "            print(txt.replace(\"C.\", \"Celcius.\"))\n",
     "            break"
    ]
   }
