--- a/Modulo4Katas.ipynb
+++ b/Modulo4Katas.ipynb
@@ -23,9 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Interesting facts about the Moon',\n",
+       " \"The Moon is Earth's only satellite\",\n",
+       " 'There are several interesting facts about the Moon and how it affects life here on Earth',\n",
+       " 'On average, the Moon moves 4cm away from the Earth every year',\n",
+       " 'This yearly drift is not significant enough to cause immediate effects on Earth',\n",
+       " 'The highest daylight temperature of the Moon is 127 C.']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "texto = \"\"\"Interesting facts about the Moon. The Moon is Earth's only satellite. There are several interesting facts about the Moon and how it affects life here on Earth. On average, the Moon moves 4cm away from the Earth every year. This yearly drift is not significant enough to cause immediate effects on Earth. The highest daylight temperature of the Moon is 127 C.\"\"\"\n",
     "texto .split(\". \")"
@@ -40,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,12 +68,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cre un bucle para imprimir solo datos sobre la Luna que estén relacionados con las palabras clave definidas anteriormente:"
+    "Cree un bucle para imprimir solo datos sobre la Luna que estén relacionados con las palabras clave definidas anteriormente:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,6 +104,34 @@
     "        if word in txt:\n",
     "            print(txt.replace(\"C.\", \"Celcius.\"))\n",
     "            break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 2 Formateando Cadenas\n",
+    "\n",
+    "El formato tiene que acomodar información sobre otras lunas, por lo que debe ser genérico.\n",
+    "\n",
+    "En lugar de reemplazar las variables en una cadena larga como parte de un párrafo, utiliza la información para presentarla en un formato tabular. El resultado debería verse así:\n",
+    "\n",
+    "    Gravity Facts about Ganymede\n",
+    "    -------------------------------------------------------------------------------\n",
+    "    Planet Name: Mars\n",
+    "    Gravity on Ganymede: 1.4300000000000002 m/s2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Datos con los que vas a trabajar\n",
+    "name = \"Moon\"\n",
+    "gravity = 0.00162 # in kms\n",
+    "planet = \"Earth\""
    ]
   }
  ],
