--- a/Modulo4Katas.ipynb
+++ b/Modulo4Katas.ipynb
@@ -133,6 +133,32 @@
     "gravity = 0.00162 # in kms\n",
     "planet = \"Earth\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Primero, crea un título para el texto. Debido a que este texto trata sobre la gravedad en la Tierra y la Luna, úsalo para crear un título significativo. Utiliza las variables en lugar de escribir."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Datos De Gravedad Sobre La Luna\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"luna\"\n",
+    "titulo = \"datos de gravedad sobre la \"\n",
+    "print(f'{titulo}{name}'.title())"
+   ]
   }
  ],
  "metadata": {
