--- a/Modulo4Katas.ipynb
+++ b/Modulo4Katas.ipynb
@@ -23,25 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Interesting facts about the Moon',\n",
-       " \"The Moon is Earth's only satellite\",\n",
-       " 'There are several interesting facts about the Moon and how it affects life here on Earth',\n",
-       " 'On average, the Moon moves 4cm away from the Earth every year',\n",
-       " 'This yearly drift is not significant enough to cause immediate effects on Earth',\n",
-       " 'The highest daylight temperature of the Moon is 127 C.']"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "texto = \"\"\"Interesting facts about the Moon. The Moon is Earth's only satellite. There are several interesting facts about the Moon and how it affects life here on Earth. On average, the Moon moves 4cm away from the Earth every year. This yearly drift is not significant enough to cause immediate effects on Earth. The highest daylight temperature of the Moon is 127 C.\"\"\"\n",
     "texto .split(\". \")"
@@ -56,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,21 +127,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Datos De Gravedad Sobre La Luna\n"
+      "Datos De Gravedad Sobre La Luna0.00162\n"
      ]
     }
    ],
    "source": [
     "name = \"luna\"\n",
+    "gravity = 0.00162 # in kms\n",
+    "planet = \"tierra\"\n",
+    "\n",
     "titulo = \"datos de gravedad sobre la \"\n",
     "print(f'{titulo}{name}'.title())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora crea una plantilla de cadena multilínea para contener el resto de la información. En lugar de usar kilómetros, debes convertir la distancia a metros multiplicando por 1,000."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00162\n"
+     ]
+    }
+   ],
+   "source": [
+    "datos = f\"\"\"{'-'*80} \n",
+    "Nombre del planeta: {planet} \n",
+    "Gravedad en {name}: {gravity * 1000} m/s2 \n",
+    "\"\"\""
    ]
   }
  ],
