--- a/Modulo4Katas.ipynb
+++ b/Modulo4Katas.ipynb
@@ -127,23 +127,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Datos De Gravedad Sobre La Luna0.00162\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = \"luna\"\n",
     "gravity = 0.00162 # in kms\n",
     "planet = \"tierra\"\n",
     "\n",
-    "titulo = \"datos de gravedad sobre la \"\n",
+    "titulo = \"datos de gravedad sobre \"\n",
     "print(f'{titulo}{name}'.title())"
    ]
   },
@@ -156,22 +148,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.00162\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "datos = f\"\"\"{'-'*80} \n",
     "Nombre del planeta: {planet} \n",
     "Gravedad en {name}: {gravity * 1000} m/s2 \n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finalmente, usa ambas variables para unir el título y los hechos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'{titulo}\\n{datos}'.title())"
    ]
   }
  ],
