--- a/Modulo4Katas.ipynb
+++ b/Modulo4Katas.ipynb
@@ -173,6 +173,32 @@
    "source": [
     "print(f'{titulo}\\n{datos}'.title())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora usa información de una luna diferente para ver si la plantilla todavía funciona.\n",
+    "\n",
+    "Datos muestra:\n",
+    "\n",
+    "planeta = 'Marte '\n",
+    "gravedad  = 0.00143\n",
+    "nombre = 'Ganímedes'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "planeta = 'Marte '\n",
+    "gravedad  = 0.00143\n",
+    "nombre = 'Ganímedes'\n",
+    "\n",
+    "print(datos)"
+   ]
   }
  ],
  "metadata": {
