--- a/Modulo4Katas.ipynb
+++ b/Modulo4Katas.ipynb
@@ -193,11 +193,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "planeta = 'Marte '\n",
-    "gravedad  = 0.00143\n",
-    "nombre = 'Ganímedes'\n",
+    "planet = 'Marte '\n",
+    "gravity  = 0.00143\n",
+    "name = 'Ganímedes'\n",
     "\n",
     "print(datos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La salida no muestra información sobre Marte. Todavía muestra información sobre la Luna. Esto sucede porque las cadenas f están ansiosas en su evaluación, por lo que las variables una vez asignadas no se pueden reasignar. Para evitar este problema, vuelva a hacer la plantilla para utilizar .format():"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Datos de Gravedad sobre: Ganímedes\n",
+      "-------------------------------------------------------------------------------\n",
+      "Nombre del planeta: Marte \n",
+      "Gravedad en Ganímedes: 0.00143 m/s2\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "plantilla_nueva = \"\"\"\n",
+    "Datos de Gravedad sobre: {name}\n",
+    "-------------------------------------------------------------------------------\n",
+    "Nombre del planeta: {planet}\n",
+    "Gravedad en {name}: {gravity} m/s2\n",
+    "\"\"\"\n",
+    "print(plantilla_nueva.format(name=name, planet=planet, gravity=gravity))"
    ]
   }
  ],
