--- a/Modulo4Katas.ipynb
+++ b/Modulo4Katas.ipynb
@@ -209,22 +209,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Datos de Gravedad sobre: Ganímedes\n",
-      "-------------------------------------------------------------------------------\n",
-      "Nombre del planeta: Marte \n",
-      "Gravedad en Ganímedes: 0.00143 m/s2\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "plantilla_nueva = \"\"\"\n",
     "Datos de Gravedad sobre: {name}\n",
@@ -233,6 +220,22 @@
     "Gravedad en {name}: {gravity} m/s2\n",
     "\"\"\"\n",
     "print(plantilla_nueva.format(name=name, planet=planet, gravity=gravity))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Debido a que .format() no permite expresiones, la gravedad en Ganímedes es incorrecta. Asegúrese de que la operación se realiza fuera de la plantilla de formato e imprima de nuevo para ver el resultado de trabajo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(plantilla_nueva.format(name=name, planet=planet, gravity=gravity*1000))"
    ]
   }
  ],
