--- a/Modulo5Katas.ipynb
+++ b/Modulo5Katas.ipynb
@@ -13,12 +13,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "tierra = 149597870\n",
     "jupiter = 778547200"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Realizar la operación\n",
+    "Con los valores obtenidos, es el momento de añadir el código para realizar la operación. Restarás el primer planeta del segundo para determinar la distancia en kilómetros. A continuación, puedes convertir la distancia del kilómetro en millas multiplicándola por 0.621."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "628949330\n",
+      "390577533.93\n"
+     ]
+    }
+   ],
+   "source": [
+    "distancia = jupiter-tierra\n",
+    "millas = distancia*0.621\n",
+    "\n",
+    "print(distancia)\n",
+    "print(millas)"
    ]
   }
  ],
@@ -32,7 +62,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.2"
   },
   "orig_nbformat": 4
