--- a/Modulo5Katas.ipynb
+++ b/Modulo5Katas.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,24 +31,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "628949330\n",
-      "390577533.93\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "distancia = jupiter-tierra\n",
     "millas = distancia*0.621\n",
     "\n",
     "print(distancia)\n",
     "print(millas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 2: convierte cadenas en números y usa valores absolutos\n",
+    "\n",
+    "Crear una aplicación para trabajar con números y entrada de usuario\n",
+    "\n",
+    "Para crear nuestra aplicación, queremos leer la distancia del sol para dos planetas, y luego mostrar la distancia entre los planetas. Haremos esto usando input para leer los valores, int para convertir a entero y luego abs para convertir el resultado en su valor absoluto.\n",
+    "\n",
+    "Lee los valores\n",
+    "Usando input, agrega el código para leer la distancia del sol para cada planeta, considerando 2 planetas."
    ]
   }
  ],
