--- a/Modulo5Katas.ipynb
+++ b/Modulo5Katas.ipynb
@@ -55,6 +55,16 @@
     "Lee los valores\n",
     "Usando input, agrega el código para leer la distancia del sol para cada planeta, considerando 2 planetas."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "planeta1 = input(\"Ingresa la distancia entre el planeta y el sol en Km\")\n",
+    "planeta2 = input(\"Ingresa la distancia entre el planeta y el sol en Km\")"
+   ]
   }
  ],
  "metadata": {
