--- a/Modulo5Katas.ipynb
+++ b/Modulo5Katas.ipynb
@@ -65,6 +65,24 @@
     "planeta1 = input(\"Ingresa la distancia entre el planeta y el sol en Km\")\n",
     "planeta2 = input(\"Ingresa la distancia entre el planeta y el sol en Km\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Convertir a número\n",
+    "Debido a que input devuelve valores de cadena, necesitamos convertirlos en números. Para nuestro ejemplo, usaremos int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "planeta1 = int(planeta1)\n",
+    "planeta2 = int(planeta2)"
+   ]
   }
  ],
  "metadata": {
