--- a/Modulo5Katas.ipynb
+++ b/Modulo5Katas.ipynb
@@ -83,6 +83,27 @@
     "planeta1 = int(planeta1)\n",
     "planeta2 = int(planeta2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Realizar el cálculo y convertir a valor absoluto\n",
+    "Con los valores almacenados como números, ahora puedes agregar el código para realizar el cálculo, restando el primer planeta del segundo. Debido a que el segundo planeta podría ser un número mayor, usarás abs para convertirlo a un valor absoluto. También agregarás el código para mostrar el resultado en millas multiplicando la distancia del kilómetro por 0.621"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distancia = planeta2-planeta1\n",
+    "millas = distancia*0.621\n",
+    "\n",
+    "print(distancia)\n",
+    "print(abs(millas))"
+   ]
   }
  ],
  "metadata": {
