Se añaden Instrucciones

--- a/Primeros pasos.ipynb
+++ b/Primeros pasos.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tu primer programa\n",
+    "\n",
+    "Para crear este programa, deberás utilizar los conceptos que aprendiste en el último módulo. Usarás Jupyter Notebook en este ejercicio, que es una combinación de texto y código con la que puede interactuar. Finaliza el código siguiente para que el resultado muestre la fecha de hoy."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -9,6 +18,17 @@
     "from datetime import date\n",
     "\n",
     "print(\"Today's date is: \"+ str(date.today()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Construir un convertidor de unidades\n",
+    "\n",
+    "El oficial superior> \"Necesito una cosa más: un programa de conversión entre parsecs y años luz. Tener un programa de este tipo podría ser realmente útil en el puente para trazar nuestro curso\".\n",
+    "\n",
+    "Tú> \"¡Lo haré!\""
    ]
   },
   {
