--- a/Modulo7Katas.ipynb
+++ b/Modulo7Katas.ipynb
@@ -21,7 +21,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_planet = \"\"\n",
+    "planets = []"
+   ]
   },
   {
    "cell_type": "markdown",
