--- a/Modulo7Katas.ipynb
+++ b/Modulo7Katas.ipynb
@@ -27,6 +27,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while new_planet.lower() != \"listo\":\n",
+    "    if new_planet:\n",
+    "        planets.append(new_planet)\n",
+    "    new_planet = input('Ingresa nuevo planeta \\n al finalizar solo ingresa \"listo\"')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -49,7 +61,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.2"
   },
   "orig_nbformat": 4
