--- a/Modulo7Katas.ipynb
+++ b/Modulo7Katas.ipynb
@@ -49,6 +49,16 @@
     "\n",
     "Crea un ciclo for para iterar sobre la lista planets. Puedes usar como nombre de la variable planet para cada planeta. Dentro del ciclo for, recuerda utilizar print para mostrar cada planet."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for planet in planets:\n",
+    "    print(planet)"
+   ]
   }
  ],
  "metadata": {
