--- a/Modulo8Katas.ipynb
+++ b/Modulo8Katas.ipynb
@@ -1,16 +1,41 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Ejercicio 1: Creación de diccionarios de Python\n",
+    "\n",
+    "Ejercicio: Crear y modificar un diccionario de Python\n",
+    "\n",
+    "Un diccionario se indica en Python mediante el uso de llaves ({ }), con pares clave/valor separados por dos puntos (:). Las claves son literales de cadena y los valores pueden ser de cualquier tipo de datos.{ }:\n",
+    "\n",
+    "demo = {\n",
+    "    'key': 'value',\n",
+    "    'number': 42\n",
+    "}\n",
+    "\n",
+    "Para este ejercicio, crearás un diccionario que almacene información sobre el planeta Marte.\n",
+    "\n",
+    "Agrega el código para crear un nuevo diccionario denominado 'planet'. Rellena con la siguiente información:\n",
+    "\n",
+    "name: Mars\n",
+    "moons: 2"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "a4b57680f947797efd172336bdac56d314a4485b1aff1f63fff2a9a40c1a00cb"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.10.2 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
