--- a/Modulo8Katas.ipynb
+++ b/Modulo8Katas.ipynb
@@ -22,6 +22,18 @@
     "name: Mars\n",
     "moons: 2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "planeta = {\n",
+    "    'nombre': 'Marte',\n",
+    "    'lunas': 2\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
