--- a/Modulo8Katas.ipynb
+++ b/Modulo8Katas.ipynb
@@ -50,6 +50,31 @@
    "source": [
     "print(f'{planeta[\"nombre\"]} tiene {planeta[\"lunas\"]} lunas')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Puedes actualizar las claves existentes o crear otras nuevas utilizando el método update o entre corchetes ([ ]). Cuando se usa update, se pasa un nuevo objeto de diccionario con los valores actualizados o nuevos. Cuando se usan corchetes, se especifica el nombre de la clave y se asigna un nuevo valor.\n",
+    "\n",
+    "demo['new_key'] = 'New value'\n",
+    "Agrega un nuevo valor con una clave de 'circunferencia (km)'. Este nuevo valor debería almacenar un diccionario con las dos circunferencias del planeta:\n",
+    "\n",
+    "polar: 6752\n",
+    "equatorial: 6792"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "planeta['circunferencia (km)'] = {\n",
+    "    'polar': 6752,\n",
+    "    'equatorial': 6792\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
