--- a/Modulo8Katas.ipynb
+++ b/Modulo8Katas.ipynb
@@ -75,6 +75,30 @@
     "    'equatorial': 6792\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imprime el nombre del planeta con su circunferencia polar."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marte tiene una circunferencia polar de 6752\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'{planeta[\"nombre\"]} tiene una circunferencia polar de {planeta[\"circunferencia (km)\"][\"polar\"]}')"
+   ]
   }
  ],
  "metadata": {
