--- a/Modulo8Katas.ipynb
+++ b/Modulo8Katas.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,19 +85,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Marte tiene una circunferencia polar de 6752\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'{planeta[\"nombre\"]} tiene una circunferencia polar de {planeta[\"circunferencia (km)\"][\"polar\"]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio 2: Programación dinámica con diccionarios\n",
+    "\n",
+    "## Ejercicio: Cálculo de valores\n",
+    "En este escenario, calcularás tanto el número total de lunas en el sistema solar como el número promedio de lunas que tiene un planeta."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lunas_planetas = {\n",
+    "    'mercury': 0,\n",
+    "    'venus': 0,\n",
+    "    'earth': 1,\n",
+    "    'mars': 2,\n",
+    "    'jupiter': 79,\n",
+    "    'saturn': 82,\n",
+    "    'uranus': 27,\n",
+    "    'neptune': 14,\n",
+    "    'pluto': 5,\n",
+    "    'haumea': 2,\n",
+    "    'makemake': 1,\n",
+    "    'eris': 1\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Los diccionarios de Python te permiten recuperar todos los valores y claves utilizando los métodos values y keys, respectivamente. Cada método devuelve una lista que contiene los datos, que luego se puede usar como una lista normal de Python. Puedes determinar el número de elementos mediante len, e iterar a través de él mediante un ciclo for.\n",
+    "\n",
+    "Agrega el código a continuación para determinar el número de lunas. Comienza almacenando el valor values de planet_moons en una variable denominada moons. A continuación, almacena el número de planetas en una variable denominada planets."
    ]
   }
  ],
