--- a/Modulo8Katas.ipynb
+++ b/Modulo8Katas.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,12 +135,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "lunas = lunas_planetas.values()\n",
     "planetas = len(lunas_planetas.keys())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agrega el código para contar el número de lunas. Puedes hacerlo creando un ciclo for para iterar a través de las lunas moons y agregándolos a una variable denominada total_moons. Finalmente calcule el promedio dividiendo total_moons por planets e imprimiendo los resultados."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.833333333333332\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_lunas = 0\n",
+    "for moon in lunas:\n",
+    "    total_lunas = total_lunas + moon\n",
+    "\n",
+    "promedio = total_lunas / planetas\n",
+    "print(promedio)"
    ]
   }
  ],
