Actualizacion subtitulo ejercicio 1

--- a/Modulo8Katas.ipynb
+++ b/Modulo8Katas.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ejercicio 1: Creación de diccionarios de Python\n",
+    "# Ejercicio 1: Creación de diccionarios de Python\n",
     "\n",
-    "Ejercicio: Crear y modificar un diccionario de Python\n",
+    "## Ejercicio: Crear y modificar un diccionario de Python\n",
     "\n",
     "Un diccionario se indica en Python mediante el uso de llaves ({ }), con pares clave/valor separados por dos puntos (:). Las claves son literales de cadena y los valores pueden ser de cualquier tipo de datos.{ }:\n",
     "\n",
