--- a/Modulo9Katas.ipynb
+++ b/Modulo9Katas.ipynb
@@ -12,11 +12,36 @@
     "\n",
     "Comienza por crear una función que necesite tres lecturas de combustible y devuelva un informe:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reporte (tanque_0, tanque_1, tanque_2):\n",
+    "    total_average = (tanque_0 + tanque_1 + tanque_2) / 3\n",
+    "    return f\"\"\"Fuel Report:\n",
+    "    Total Average: {total_average}%\n",
+    "    Main tank: {tanque_0}%\n",
+    "    External tank: {tanque_1}%\n",
+    "    Hydrogen tank: {tanque_2}% \n",
+    "    \"\"\""
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "a4b57680f947797efd172336bdac56d314a4485b1aff1f63fff2a9a40c1a00cb"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.10.2 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
