--- a/Modulo9Katas.ipynb
+++ b/Modulo9Katas.ipynb
@@ -20,13 +20,29 @@
    "outputs": [],
    "source": [
     "def reporte (tanque_0, tanque_1, tanque_2):\n",
-    "    total_average = (tanque_0 + tanque_1 + tanque_2) / 3\n",
-    "    return f\"\"\"Fuel Report:\n",
-    "    Total Average: {total_average}%\n",
-    "    Main tank: {tanque_0}%\n",
-    "    External tank: {tanque_1}%\n",
-    "    Hydrogen tank: {tanque_2}% \n",
+    "    total = (tanque_0 + tanque_1 + tanque_2) / 3\n",
+    "    return f\"\"\"Reporte de combustible:\n",
+    "    Porcentage total: {total}%\n",
+    "    Tanque principal: {tanque_0}%\n",
+    "    Tanque secundario: {tanque_1}%\n",
+    "    Tanque oxigeno: {tanque_2}% \n",
     "    \"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora que hemos definido la función de informes, vamos a comprobarlo. Para esta misión, los tanques no están llenos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(reporte(80, 70, 85))"
    ]
   }
  ],
@@ -40,7 +56,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.2"
   },
   "orig_nbformat": 4
