--- a/Modulo9Katas.ipynb
+++ b/Modulo9Katas.ipynb
@@ -44,6 +44,27 @@
    "source": [
     "print(reporte(80, 70, 85))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En lugar de simplemente crear el informe, la función también está calculando el promedio. Mejora la legibilidad extrayendo el cálculo promedio de la función en una nueva función para que el promedio se pueda hacer de forma independiente:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def porcentaje(values):\n",
+    "    total = sum(values)\n",
+    "    cantidad = len(values)\n",
+    "    return total / cantidad\n",
+    "\n",
+    "porcentaje([80, 85, 81]) "
+   ]
   }
  ],
  "metadata": {
