--- a/Modulo9Katas.ipynb
+++ b/Modulo9Katas.ipynb
@@ -22,7 +22,7 @@
     "def reporte (tanque_0, tanque_1, tanque_2):\n",
     "    total = (tanque_0 + tanque_1 + tanque_2) / 3\n",
     "    return f\"\"\"Reporte de combustible:\n",
-    "    Porcentage total: {total}%\n",
+    "    Porcentaje total: {total}%\n",
     "    Tanque principal: {tanque_0}%\n",
     "    Tanque secundario: {tanque_1}%\n",
     "    Tanque oxigeno: {tanque_2}% \n",
@@ -64,6 +64,43 @@
     "    return total / cantidad\n",
     "\n",
     "porcentaje([80, 85, 81]) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora actualiza la función de informes para llamando a la nueva función del promedio:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reporte de combustible:\n",
+      "    Porcentaje total: 78.0%\n",
+      "    Tanque principal: 88%\n",
+      "    Tanque secundario: 76%\n",
+      "    Tanque oxigeno: 70% \n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "def reporte(tanque_0, tanque_1, tanque_2):\n",
+    "    return f\"\"\"Reporte de combustible:\n",
+    "    Porcentaje total: {porcentaje([tanque_0, tanque_1, tanque_2])}%\n",
+    "    Tanque principal: {tanque_0}%\n",
+    "    Tanque secundario: {tanque_1}%\n",
+    "    Tanque oxigeno: {tanque_2}% \n",
+    "    \"\"\"\n",
+    "\n",
+    "print(reporte(88, 76, 70))"
    ]
   }
  ],
