--- a/Modulo9Katas.ipynb
+++ b/Modulo9Katas.ipynb
@@ -89,6 +89,35 @@
     "\n",
     "print(reporte(88, 76, 70))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio 2: Trabajo con argumentos de palabra clave\n",
+    "\n",
+    "## Ejercicio : Trabajar con argumentos de palabras clave en funciones\n",
+    "\n",
+    "En este ejercicio, construirás un informe de cohete que requiere varias piezas de información, como el tiempo hasta el destino, el combustible a la izquierda y el nombre del destino. Comienza por crear una función que creará un informe preciso de la misión:\n",
+    "\n",
+    "Función con un informe preciso de la misión. Considera hora de prelanzamiento, tiempo de vuelo, destino, tanque externo y tanque interno"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reporte_mision(pre_lanzamiento, tiempo_vuelo, destino, tanque_externo, tanque_interno):\n",
+    "    return f\"\"\"\n",
+    "    Mision a: {destino}\n",
+    "    Total del tiempo de viaje: {pre_lanzamiento + tiempo_vuelo} minutos.\n",
+    "    Total del combustible: {tanque_externo + tanque_interno:,.2f} litros.\n",
+    "    \"\"\"\n",
+    "\n",
+    "print(reporte_mision(14, 51, \"Luna\", 200000, 300000))"
+   ]
   }
  ],
  "metadata": {
