--- a/Modulo9Katas.ipynb
+++ b/Modulo9Katas.ipynb
@@ -118,6 +118,41 @@
     "\n",
     "print(reporte_mision(14, 51, \"Luna\", 200000, 300000))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La función es problemática porque no se puede adaptar para minutos adicionales o tanques adicionales de combustible. Hazlo más flexible permitiendo cualquier número de pasos basados en el tiempo y cualquier número de tanques. En lugar de usar *args y **kwargs, aprovecha el hecho de que puedes usar cualquier nombre que desees. Asegurate que la función sea más legible mediante el uso de nombres de variables que están asociados con las entradas, como *minutes y **fuel_reservoirs:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Mision a: Luna\n",
+      "    Total del tiempo de viaje: 76 minutos\n",
+      "    Total del combustible: 500,000.00\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "def reporte_mision(destino, *minutos, **deposito):\n",
+    "    return f\"\"\"\n",
+    "    Mision a: {destino}\n",
+    "    Total del tiempo de viaje: {sum(minutos)} minutos\n",
+    "    Total del combustible: {sum(deposito.values()):,.2f}\n",
+    "    \"\"\"\n",
+    "\n",
+    "print(reporte_mision(\"Luna\", 10, 15, 51, tanq_1=300000, tanq_2=200000))"
+   ]
   }
  ],
  "metadata": {
