--- a/Modulo9Katas.ipynb
+++ b/Modulo9Katas.ipynb
@@ -128,21 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "    Mision a: Luna\n",
-      "    Total del tiempo de viaje: 76 minutos\n",
-      "    Total del combustible: 500,000.00\n",
-      "    \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def reporte_mision(destino, *minutos, **deposito):\n",
     "    return f\"\"\"\n",
@@ -152,6 +140,35 @@
     "    \"\"\"\n",
     "\n",
     "print(reporte_mision(\"Luna\", 10, 15, 51, tanq_1=300000, tanq_2=200000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Debido a que el combustible que queda en los tanques es específico de cada tanque, actualiza la función para usar el nombre de cada tanque en el informe:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reporte_mision(destino, *minutos, **deposito):\n",
+    "    reporte_tanques = f\"\"\"\n",
+    "    Mision a: {destino}.\n",
+    "    Total del tiempo de viaje: {sum(minutos)} minutos.\n",
+    "    Total del combustible: {sum(deposito.values()):,.2f}.\n",
+    "    -------------------------------------------------------------------------------\n",
+    "    \"\"\"\n",
+    "    for nombre, litros in deposito.items():\n",
+    "        reporte_tanques += f\"\"\"\n",
+    "        Tanque {nombre}: {litros:,.2f} litros restantes.\n",
+    "        \"\"\"\n",
+    "    return reporte_tanques\n",
+    "\n",
+    "print(reporte_mision(\"Luna\", 8, 11, 55, principal=300000, secundario=200000))"
    ]
   }
  ],
